Fix cell alignment

--- a/powa/static/scss/powa_backgrid.scss
+++ b/powa/static/scss/powa_backgrid.scss
@@ -56,7 +56,7 @@
     display: none;
     padding: 4px 5px;
     overflow: hidden;
-    text-align: left;
+    text-align: center;
     text-overflow: ellipsis;
     vertical-align: middle;
     border-bottom: 1px solid #DDD;
@@ -105,7 +105,7 @@
   .string-cell.editor input[type=text],
   .uri-cell.editor input[type=text],
   .email-cell.editor input[type=text] {
-    text-align: left;
+    text-align: center;
   }
 
   .date-cell,
@@ -120,7 +120,7 @@
   .number-cell.editor input[type=text],
   .integer-cell.editor input[type=text],
   .percent-cell.editor input[type=text] {
-    text-align: right;
+    text-align: center;
   }
 
   .boolean-cell,
